# moonsnap

./: .fallowrc.jsonc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  audit.toml  bunfig.toml  package-lock.json  package.json  turbo.json  vercel.json
apps/desktop/gpui-poc/: Cargo.toml
apps/desktop/gpui-poc/src/: app.rs  capture_toolbar.rs  colors.rs  components.rs  image_editor.rs  main.rs  paint.rs  stage.rs  video_editor.rs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: desktop.json
apps/desktop/src-tauri/crates/: LIB_EXTRACTION_PLAN.md  PR_SPLIT_PLAN.md  PR_SPLIT_REPORT.md  README.md  SEMVER_POLICY.md
apps/desktop/src-tauri/crates/camera-windows/: Cargo.toml
apps/desktop/src-tauri/crates/camera-windows/src/: lib.rs
apps/desktop/src-tauri/crates/moonsnap-capture/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/moonsnap-capture-types/: Cargo.toml
apps/desktop/src-tauri/crates/moonsnap-capture-types/src/: capture_settings.rs  lib.rs  recording.rs  webcam.rs
apps/desktop/src-tauri/crates/moonsnap-capture/src/: audio_multitrack.rs  audio_sync.rs  audio_wasapi.rs  capture_source.rs  d3d_capture.rs  ffmpeg_gif_encoder.rs  gif_encoder.rs  lib.rs  recorder_capture_lifecycle.rs  recorder_cursor_persistence.rs  recorder_cursor_region.rs  recorder_gif.rs  recorder_helpers.rs  recorder_output_paths.rs  recorder_progress.rs  recorder_video_capture.rs  recorder_video_finalize.rs  recorder_video_loop.rs  recorder_video_postprocess.rs  recorder_webcam_lifecycle.rs  recording_runtime.rs  state.rs  timestamp.rs
apps/desktop/src-tauri/crates/moonsnap-core/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/moonsnap-core/src/: error.rs
apps/desktop/src-tauri/crates/moonsnap-domain/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/moonsnap-domain/src/: captions.rs  capture_settings.rs  lib.rs  recording.rs  storage.rs  video_export.rs  video_project.rs
apps/desktop/src-tauri/crates/moonsnap-error/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/moonsnap-error/src/: lib.rs
apps/desktop/src-tauri/crates/moonsnap-export/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/moonsnap-export/src/: caption_timeline.rs  composition_plan.rs  cursor_overlay.rs  decode_plan.rs  encoder_selection.rs  export_plan.rs  ffmpeg_plan.rs  frame_composition.rs  frame_context.rs  frame_ops.rs  frame_overlays.rs  frame_path_plan.rs  frame_pipeline_state.rs  frame_prepare.rs  job_control.rs  job_finalize.rs  lib.rs  pipeline.rs  temp_file.rs  timeline_plan.rs  timing.rs
apps/desktop/src-tauri/crates/moonsnap-hotkeys/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/moonsnap-hotkeys/src/: lib.rs  manager.rs
apps/desktop/src-tauri/crates/moonsnap-media/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/moonsnap-media/src/: ffmpeg.rs  lib.rs
apps/desktop/src-tauri/crates/moonsnap-project-types/: Cargo.toml
apps/desktop/src-tauri/crates/moonsnap-project-types/src/: lib.rs  video_project.rs  vp_annotations.rs  vp_text.rs  vp_zoom.rs
apps/desktop/src-tauri/crates/moonsnap-render/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/moonsnap-render/src/: caption_layer.rs  cursor_composite.rs  cursor_overlay_layer.rs  lib.rs  nv12_converter.rs  parity.rs  prerendered_text.rs  scene.rs  text.rs  types.rs  webcam_overlay.rs  zoom.rs  zoom_state.rs
apps/desktop/src-tauri/crates/scap-direct3d/: Cargo.toml
apps/desktop/src-tauri/crates/scap-direct3d/src/: lib.rs
apps/desktop/src-tauri/crates/scap-targets/: Cargo.toml
apps/desktop/src-tauri/crates/scap-targets/src/: lib.rs  win.rs
apps/desktop/src-tauri/crates/snapit-capture/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/snapit-capture/src/: audio_multitrack.rs  audio_wasapi.rs  capture_source.rs  d3d_capture.rs  ffmpeg_gif_encoder.rs  lib.rs  recorder_audio_paths.rs  recorder_capture_lifecycle.rs  recorder_countdown.rs  recorder_cursor_region.rs  recorder_finalization.rs  recorder_first_frame.rs  recorder_gif.rs  recorder_helpers.rs  recorder_loop_control.rs  recorder_pacing.rs  recorder_progress.rs  recorder_video_capture.rs  recorder_video_finalize.rs  recorder_video_loop.rs  recorder_video_postprocess.rs  recorder_webcam_feed.rs  state.rs
apps/desktop/src-tauri/crates/snapit-core/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/snapit-core/src/: lib.rs
apps/desktop/src-tauri/crates/snapit-domain/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/snapit-domain/src/: captions.rs  capture_settings.rs  recording.rs  storage.rs  video_export.rs  video_project.rs  webcam.rs
apps/desktop/src-tauri/crates/snapit-export/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/snapit-export/src/: caption_timeline.rs  composition_plan.rs  cursor_overlay.rs  decode_plan.rs  (+17 more)
apps/desktop/src-tauri/crates/snapit-media/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/snapit-render/: Cargo.toml  README.md
apps/desktop/src-tauri/examples/: list_audio.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/app/: events.rs  tray.rs
apps/desktop/src-tauri/src/commands/: AGENTS.md  capture_settings.rs  fonts.rs  gif_editing.rs  image.rs  keyboard_hook.rs  license.rs  logging.rs  mod.rs  preview.rs  registry.rs  settings.rs  text_prerender.rs
apps/desktop/src-tauri/src/config/: recording.rs  webcam.rs
apps/desktop/src-tauri/src/cursor/: events.rs  mod.rs
apps/desktop/src-tauri/src/license/: cache.rs  device.rs  feature_gate.rs  mod.rs  types.rs  validation.rs
apps/desktop/src-tauri/src/preview/: decoder.rs  frame_ws.rs  mod.rs  native_surface.rs
apps/desktop/src-tauri/src/rendering/: AGENTS.md  caption_layer.rs  caption_parity_test.rs  caption_pixel_test.rs  compositor.rs  coord.rs  cursor.rs  decoder.rs  editor_instance.rs  mod.rs  parity.rs  prerendered_text.rs  renderer.rs  renderer_state.rs  stream_decoder.rs  svg_cursor.rs  text.rs  text_layer.rs  text_overlay_layer.rs  types.rs  zoom.rs
(+692 files in other folders)
