[package]
name = "moonsnap-gpui-poc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
