[package]
name = "moonsnap-camera-windows"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Pinned to 0.60 (ahead of the workspace 0.58 baseline) for newer
# Media Foundation APIs not present in 0.58.
windows = { version = "0.60", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Performance",
    "Win32_System_WinRT",
    "Win32_Foundation",
] }
windows-core = "0.60"
