[package]
name = "moonsnap-capture"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.17"
crossbeam-channel = "0.5"
hound = "3.5"
image = "0.25"
lazy_static = "1.5"
log = "0.4"
scap-direct3d = { path = "../scap-direct3d" }
scap-targets = { path = "../scap-targets" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
moonsnap-domain = { path = "../moonsnap-domain" }
moonsnap-media = { path = "../moonsnap-media" }
wasapi = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Graphics_Capture",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Performance",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
proptest = "1.4"
