[package]
name = "moonsnap-capture"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
cpal = { workspace = true }
crossbeam-channel = { workspace = true }
hound = { workspace = true }
image = { workspace = true, features = ["gif", "jpeg", "png", "webp"] }
lazy_static = { workspace = true }
log = { workspace = true }
scap-direct3d = { path = "../scap-direct3d" }
scap-targets = { path = "../scap-targets" }
serde = { workspace = true }
serde_json = { workspace = true }
moonsnap-capture-types = { path = "../moonsnap-capture-types" }
moonsnap-media = { path = "../moonsnap-media" }
wasapi = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Graphics_Capture",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Wdk_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
proptest = { workspace = true }
