[package]
name = "moonsnap-domain"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
moonsnap-capture-types = { path = "../moonsnap-capture-types" }
moonsnap-project-types = { path = "../moonsnap-project-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10"

[dev-dependencies]
