[package]
name = "moonsnap-domain"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
moonsnap-capture-types = { path = "../moonsnap-capture-types" }
moonsnap-project-types = { path = "../moonsnap-project-types" }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
