[package]
name = "moonsnap-export"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4"
moonsnap-project-types = { path = "../moonsnap-project-types" }
moonsnap-media = { path = "../moonsnap-media" }
moonsnap-render = { path = "../moonsnap-render" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["time"] }
