[package]
name = "moonsnap-export"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
moonsnap-project-types = { path = "../moonsnap-project-types" }
moonsnap-media = { path = "../moonsnap-media" }
moonsnap-render = { path = "../moonsnap-render" }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
