[package]
name = "moonsnap-render"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bezier_easing = "0.1"
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.9"
image = "0.25"
log = "0.4"
serde = { version = "1", features = ["derive"] }
moonsnap-project-types = { path = "../moonsnap-project-types" }
tokio = { version = "1", features = ["sync"] }
ts-rs = "10"
wgpu = "25"

[dev-dependencies]
proptest = "1.10"
