[package]
name = "moonsnap-render"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints]
workspace = true

[dependencies]
bezier_easing = { workspace = true }
bytemuck = { workspace = true }
glyphon = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
log = { workspace = true }
serde = { workspace = true }
moonsnap-project-types = { path = "../moonsnap-project-types" }
tokio = { workspace = true, features = ["sync"] }
ts-rs = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
