[package]
name = "snapit-export"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4"
snapit-domain = { path = "../snapit-domain" }
snapit-media = { path = "../snapit-media" }
snapit-render = { path = "../snapit-render" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
